--- a/ucsd-cse230-hoogle-docs.cabal
+++ b/ucsd-cse230-hoogle-docs.cabal
@@ -42,6 +42,7 @@ executable client
                     , path-io
                     , pretty-show
                     , text
+                    , vector
                     , vty
     hs-source-dirs:   app
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -64,10 +65,12 @@ executable server
     , cursor
     , cursor-brick
     , directory
+    , filepath
     , path
     , path-io
     , pretty-show
     , text
+    , vector
     , vty
     --   aeson
     -- , base
@@ -104,6 +107,7 @@ executable Tui
                     , path-io
                     , pretty-show
                     , text
+                    , vector
                     , vty
                     , websockets
     hs-source-dirs:   app
@@ -126,6 +130,7 @@ executable ViewerTui
                     , path-io
                     , pretty-show
                     , text
+                    , vector
                     , vty
                     , websockets
     hs-source-dirs:   app
